--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-  "name": "todo-list-app",
-  "version": "1.0.0",
-  "description": "A simple todo app made with vanilla css and ts",
-  "main": "index.ts",
-  "scripts": {
-    "build": "webpack",
-    "build:watch": "webpack --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Athma-Vasi/Todo-List-App.git"
-  },
-  "keywords": [
-    "todo",
-    "todo",
-    "app"
-  ],
-  "author": "Athma Vasi",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Athma-Vasi/Todo-List-App/issues"
-  },
-  "homepage": "https://github.com/Athma-Vasi/Todo-List-App#readme",
-  "devDependencies": {
-    "css-loader": "^6.7.1",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.6.0",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.3.0",
-    "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2"
-  }
+	"name": "todo-list-app",
+	"version": "1.0.0",
+	"description": "A simple todo app made with vanilla css and ts",
+	"main": "index.ts",
+	"scripts": {
+		"build": "webpack",
+		"build:watch": "webpack --watch",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Athma-Vasi/Todo-List-App.git"
+	},
+	"keywords": [
+		"todo",
+		"todo",
+		"app"
+	],
+	"author": "Athma Vasi",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/Athma-Vasi/Todo-List-App/issues"
+	},
+	"homepage": "https://athma-vasi.github.io/Todo-List-App/",
+	"devDependencies": {
+		"css-loader": "^6.7.1",
+		"html-webpack-plugin": "^5.5.0",
+		"mini-css-extract-plugin": "^2.6.0",
+		"style-loader": "^3.3.1",
+		"ts-loader": "^9.3.0",
+		"webpack": "^5.72.1",
+		"webpack-cli": "^4.9.2"
+	}
 }
