--- a/package.json
+++ b/package.json
@@ -27,12 +27,19 @@
 		"css-loader": "^6.7.1",
 		"file-loader": "^6.2.0",
 		"html-loader": "^3.1.0",
+		"@typescript-eslint/eslint-plugin": "^5.27.1",
+		"@typescript-eslint/parser": "^5.27.1",
+		"eslint": "^8.17.0",
+		"eslint-config-prettier": "^8.5.0",
 		"html-webpack-plugin": "^5.5.0",
 		"mini-css-extract-plugin": "^2.6.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-simple-import-sort": "^7.0.0",
 		"style-loader": "^3.3.1",
 		"ts-loader": "^9.3.0",
 		"url-loader": "^4.1.1",
 		"webpack": "^5.72.1",
-		"webpack-cli": "^4.9.2"
+		"webpack-cli": "^4.9.2",
+		"typescript": "^4.7.3"
 	}
 }
